--- a/data/bacterial_data/01_data_preparation.ipynb
+++ b/data/bacterial_data/01_data_preparation.ipynb
@@ -2,14 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "73f5683a-48cf-4364-a1b6-032cef33608d",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘readr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘purrr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘stringr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘forcats’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘lubridate’ was built under R version 4.2.2”\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Warning message:\n",
+      "“package ‘gtools’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘cowplot’ was built under R version 4.2.3”\n",
+      "\n",
+      "Attaching package: ‘cowplot’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:lubridate’:\n",
+      "\n",
+      "    stamp\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(diann)\n",
     "library(tidyverse)\n",
@@ -29,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "fd5a7a0b",
    "metadata": {
     "vscode": {
@@ -59,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "5a226e66-56ba-49c9-8be0-3129f1b723b2",
    "metadata": {
     "vscode": {
@@ -98,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "87934cfe-075b-438b-a7e4-d628ff228e6e",
    "metadata": {
     "vscode": {
@@ -127,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "eb6dc8f3",
    "metadata": {
     "vscode": {
@@ -148,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "a8f090f8",
    "metadata": {
     "vscode": {
@@ -202,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "da000bc5",
    "metadata": {
     "vscode": {
@@ -252,6 +302,9 @@
    "execution_count": 12,
    "id": "0cf7b908",
    "metadata": {
+    "tags": [
+     "parameters"
+    ],
     "vscode": {
      "languageId": "r"
     }
