networkx mapping checks

--- a/data/TMT_data/01_data_preparation.ipynb
+++ b/data/TMT_data/01_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -312,7 +312,7 @@
     "    \n",
     "  # Summarize gene counts\n",
     "  # Filter, select, and manipulate the counts dataframe\n",
-    "  \"Peptide.is.razor\"\n",
+    "  #\"Peptide.is.razor\"\n",
     "  # counts_df <- combined_counts[[center]] %>%\n",
     "  #   filter(Gene.names != \"\") %>%\n",
     "  #   select(-c(Majority.protein.IDs, Razor...unique.peptides)) %>%\n",
@@ -344,7 +344,12 @@
     "  # Write the metadata to a file\n",
     "  metadata %>%\n",
     "    filter(Center == center) %>%\n",
-    "    write.table(paste0(genes_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "    write.table(paste0(genes_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
+    "\n",
+    "  if(center == 'Center2'){\n",
+    "    write.table(genes_intensities, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/intensities_Gene.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "    write.table(counts_df, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/counts_Gene.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "  }\n",
     "}"
    ]
   },
@@ -357,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -369,7 +374,6 @@
     "\n",
     "# This loop iterates over a list of centers and performs data preparation tasks for each center.\n",
     "for(center in list(\"Center1\", \"Center2\", \"Center3\")) {\n",
-    "  \n",
     "  # Summarize gene names\n",
     "  genes_intensities <- combined_pg_intensities[[center]] %>%\n",
     "    select(-Gene.names) %>%\n",
@@ -392,7 +396,15 @@
     "  # Write metadata to a file\n",
     "  metadata %>%\n",
     "    filter(Center == center) %>%\n",
-    "    write.table(paste0(pg_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "    write.table(paste0(pg_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
+    "\n",
+    "  if(center == 'Center2'){\n",
+    "    write.table(genes_intensities, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/intensities_PG.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "    write.table(counts_df, \"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/counts_PG.tsv\", sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "    metadata %>%\n",
+    "      filter(Center == center) %>%\n",
+    "      write.table(\"/home/yuliya/repos/cosybio/FedProt/data/TMT_data/balanced_data/Check_center_2/metadata.tsv\", sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
+    "  }\n",
     "}"
    ]
   },
@@ -405,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -425,7 +437,7 @@
     "    peptides_report$Proteins[peptides_report$Proteins == ''] <- peptides_report$Leading.razor.protein[peptides_report$Proteins == '']\n",
     "\n",
     "    pg_intensities_all <- peptides_report %>%\n",
-    "        select(c(\"Sequence\", \"Proteins\", \"Gene.names\", rownames(center_metadata)))\n",
+    "        select(c(\"Sequence\", \"Proteins\", \"Gene.names\", rownames(center_metadata)), 'Reverse', 'Potential.contaminant')\n",
     "        \n",
     "    # remove decoy matches and matches to contaminant\n",
     "    peptides_report <- peptides_report[!peptides_report$Reverse==\"+\",]\n",
@@ -457,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -516,8 +528,8 @@
     "        rowwise() %>% # Apply the following operations to each row individually\n",
     "        mutate(Gene.names = map_chr(strsplit(Gene.names, \";\"), ~paste(sort(.x), collapse = \";\"))) %>%\n",
     "        mutate(Proteins = map_chr(strsplit(Proteins, \";\"), ~paste(sort(.x), collapse = \";\")))\n",
-    "    pg_intensities_NF <- pg_intensities_NF[, c(\"Sequence\", \"Proteins\", \"Gene.names\", rownames(center_metadata))]\n",
-    "    colnames(pg_intensities_NF) <- c(\"Sequence\", \"Proteins\", \"Gene.names\", center_metadata$Quantitative.column.name)\n",
+    "    pg_intensities_NF <- pg_intensities_NF[, c(\"Sequence\", \"Proteins\", \"Gene.names\", 'Reverse', 'Potential.contaminant', rownames(center_metadata))]\n",
+    "    colnames(pg_intensities_NF) <- c(\"Sequence\", \"Proteins\", \"Gene.names\", 'Reverse', 'Potential.contaminant', center_metadata$Quantitative.column.name)\n",
     "\n",
     "    write.table(pg_intensities_NF, paste0(genes_output_path, center, \"/aggregated_NF.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
     "    write.table(pg_intensities_NF, paste0(pg_output_path, center, \"/aggregated_NF.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
@@ -525,10 +537,10 @@
     "    # write metadata\n",
     "    metadata %>%\n",
     "        filter(Center == center) %>%\n",
-    "        write.table(paste0(genes_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "        write.table(paste0(genes_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
     "    metadata %>%\n",
     "        filter(Center == center) %>%\n",
-    "        write.table(paste0(pg_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "        write.table(paste0(pg_output_path, center, \"/metadata.tsv\"), sep = \"\\t\", quote = FALSE, row.names = TRUE)\n",
     "}\n"
    ]
   },
