restructured TMT data preprocessing

--- a/data/TMT_data/01_data_preparation.ipynb
+++ b/data/TMT_data/01_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -11,12 +11,14 @@
    "outputs": [],
    "source": [
     "library(tidyverse)\n",
-    "library(UpSetR)"
+    "library(UpSetR)\n",
+    "\n",
+    "source(\"../../evaluation_utils/preprocessing_MQ/preprocessing_report.R\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -171,55 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Function to preprocess the data from a given path and metadata\n",
-    "# Args:\n",
-    "#   path: The file path of the data to be preprocessed\n",
-    "#   meta_data: The metadata associated with the data\n",
-    "# Returns:\n",
-    "#   A list containing the preprocessed protein intensities and counts\n",
-    "preprocess_mxout <- function(path, meta_data){\n",
-    "    PG_report <- read.table(\n",
-    "        path,\n",
-    "        header=T,\n",
-    "        sep=\"\\t\",\n",
-    "        stringsAsFactors = F)\n",
-    "    \n",
-    "    # remove decoy matches and matches to contaminant\n",
-    "    PG_report <- PG_report[!PG_report$Reverse==\"+\",]\n",
-    "    PG_report <- PG_report[!PG_report$Potential.contaminant==\"+\",]\n",
-    "    # if the PG_report$Only.identified.by.site is not all NA and contains \"+\" values - remove this rows\n",
-    "    if(!all(is.na(PG_report$Only.identified.by.site))) {\n",
-    "        # # Only.identified.by.site - exclude proteins that were only identified by a modification site\n",
-    "        PG_report <- PG_report[!PG_report$Only.identified.by.site==\"+\",]\n",
-    "    }\n",
-    "\n",
-    "    # PG_report <- PG_report[PG_report$Gene.names != '',]\n",
-    "\n",
-    "\n",
-    "    pg_intensities <- PG_report %>%\n",
-    "        select(c(Majority.protein.IDs, Gene.names, rownames(meta_data)))\n",
-    "    colnames(pg_intensities) <- c(\"Majority.protein.IDs\", \"Gene.names\", meta_data$Quantitative.column.name)\n",
-    "    print(length(pg_intensities$Majority.protein.IDs))\n",
-    "\n",
-    "    # counts\n",
-    "    pg_counts <- PG_report %>%\n",
-    "        select(c(\"Majority.protein.IDs\", \"Gene.names\", \"Peptide.IDs\", \"Razor...unique.peptides\", \"Peptide.is.razor\"))\n",
-    "\n",
-    "    return(list(pg_intensities, pg_counts)) \n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -230,9 +184,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] 500\n",
-      "[1] 530\n",
-      "[1] 456\n"
+      "Processed data count: 500 \n",
+      "Counts data count: 500 \n",
+      "Processed data count: 530 \n",
+      "Counts data count: 530 \n",
+      "Processed data count: 456 \n",
+      "Counts data count: 456 \n"
      ]
     }
    ],
@@ -258,7 +215,7 @@
     "        filter(Center == center)\n",
     "\n",
     "    # Preprocess the MaxQuant output file for the current center\n",
-    "    results_list <- preprocess_mxout(list_of_inputs[[center]], center_metadata)\n",
+    "    results_list <- preprocess_data_mxout(list_of_inputs[[center]], center_metadata, data_type='protein')\n",
     "    pg_intensities <- results_list[[1]]\n",
     "    counts_df <- results_list[[2]]\n",
     "\n",
@@ -281,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -362,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -416,51 +373,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "preprocess_mxout <- function(path, center_metadata, center){\n",
-    "    peptides_report <- read.table(\n",
-    "        path,\n",
-    "        header=T,\n",
-    "        sep=\"\\t\",\n",
-    "        stringsAsFactors = F)\n",
-    "    \n",
-    "\n",
-    "    # if Proteins is empty - take the value from Leading.razor.protein\n",
-    "    peptides_report$Proteins[peptides_report$Proteins == ''] <- peptides_report$Leading.razor.protein[peptides_report$Proteins == '']\n",
-    "\n",
-    "    pg_intensities_all <- peptides_report %>%\n",
-    "        select(c(\"Sequence\", \"Proteins\", \"Gene.names\", rownames(center_metadata)), 'Reverse', 'Potential.contaminant')\n",
-    "        \n",
-    "    # remove decoy matches and matches to contaminant\n",
-    "    peptides_report <- peptides_report[!peptides_report$Reverse==\"+\",]\n",
-    "    peptides_report <- peptides_report[!peptides_report$Potential.contaminant==\"+\",]\n",
-    "    # if the peptides_report$Only.identified.by.site is not all NA and contains \"+\" values - remove this rows\n",
-    "    if(!all(is.na(peptides_report$Only.identified.by.site))) {\n",
-    "        # # Only.identified.by.site - exclude proteins that were only identified by a modification site\n",
-    "        peptides_report <- peptides_report[!peptides_report$Only.identified.by.site==\"+\",]\n",
-    "    }\n",
-    "\n",
-    "    # take only the columns that we need\n",
-    "    pg_intensities <- peptides_report %>%\n",
-    "        select(c(\"Sequence\", \"Proteins\", \"Gene.names\", rownames(center_metadata)))\n",
-    "\n",
-    "    print(center)\n",
-    "    print(paste0('All peptides: ', length(pg_intensities_all$Sequence)))\n",
-    "    print(paste0('Filtered peptides: ', length(pg_intensities$Sequence)))\n",
-    "\n",
-    "    return(list(pg_intensities_all, pg_intensities))\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -469,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -480,15 +392,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"Center1\"\n",
-      "[1] \"All peptides: 5958\"\n",
-      "[1] \"Filtered peptides: 5281\"\n",
-      "[1] \"Center2\"\n",
-      "[1] \"All peptides: 6303\"\n",
-      "[1] \"Filtered peptides: 5700\"\n",
-      "[1] \"Center3\"\n",
-      "[1] \"All peptides: 5528\"\n",
-      "[1] \"Filtered peptides: 4978\"\n"
+      "Processed data count: 5958 \n",
+      "Processed data count: 5281 \n",
+      "Processed data count: 6303 \n",
+      "Processed data count: 5700 \n",
+      "Processed data count: 5528 \n",
+      "Processed data count: 4978 \n"
      ]
     }
    ],
@@ -510,9 +419,8 @@
     "    center_metadata <- metadata %>%\n",
     "        filter(Center == center)\n",
     "\n",
-    "    results_both <- preprocess_mxout(list_of_outputs[[center]], center_metadata, center)\n",
-    "    not_filtered <- results_both[[1]]\n",
-    "    results_list <- results_both[[2]]\n",
+    "    not_filtered <- preprocess_data_mxout(list_of_outputs[[center]], center_metadata, data_type = 'peptide', do_filter = FALSE)\n",
+    "    results_list <- preprocess_data_mxout(list_of_outputs[[center]], center_metadata, data_type = 'peptide', do_filter = TRUE)\n",
     "\n",
     "    pg_intensities <- results_list %>%\n",
     "        rowwise() %>% # Apply the following operations to each row individually\n",
