--- a/data/bacterial_data/01_data_preparation.ipynb
+++ b/data/bacterial_data/01_data_preparation.ipynb
@@ -2,14 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "id": "73f5683a-48cf-4364-a1b6-032cef33608d",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘readr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘purrr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘stringr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘forcats’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘lubridate’ was built under R version 4.2.2”\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Warning message:\n",
+      "“package ‘gtools’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘gridExtra’ was built under R version 4.2.3”\n",
+      "\n",
+      "Attaching package: ‘gridExtra’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    combine\n",
+      "\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘data.table’ was built under R version 4.2.2”\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:lubridate’:\n",
+      "\n",
+      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
+      "    yday, year\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(diann)\n",
     "library(tidyverse)\n",
@@ -35,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "id": "21fe91d2",
    "metadata": {
     "vscode": {
@@ -89,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "id": "da000bc5",
    "metadata": {
     "vscode": {
@@ -136,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "id": "04c56171",
    "metadata": {
     "vscode": {
@@ -207,13 +279,13 @@
     "    layout <- (plot_density | plot_pca) /\n",
     "            (plot_boxplot | plot_heatmap)\n",
     "    # save plot\n",
-    "    ggsave(file = paste0(plot_file_prefix, \"_plots.png\"), plot = layout, width = 11, height = 10)\n",
+    "    ggsave(file = paste0(plot_file_prefix, \"_plots.svg\"), plot = layout, width = 11, height = 10)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "id": "1bf11812",
    "metadata": {
     "vscode": {
@@ -572,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 5,
    "id": "b4a1c073",
    "metadata": {
     "vscode": {
@@ -849,7 +921,6 @@
     "    # create metadata file\n",
     "    metadata <- create_metadata(data, name)\n",
     "    batch_info <- metadata\n",
-    "    write_tsv(metadata, paste0(file_name_prefix, \"metadata.tsv\"))\n",
     "    # select only some samples\n",
     "    set.seed(42)\n",
     "    if (name == \"lab_A\") {\n",
@@ -874,6 +945,7 @@
     "    }\n",
     "    batch_info <- batch_info[batch_info$file %in% sample_names, ]\n",
     "    metadata <- metadata[metadata$file %in% sample_names, ]\n",
+    "    write_tsv(metadata, paste0(file_name_prefix, \"metadata.tsv\"))\n",
     "\n",
     "    # add  into metadata for centralized run\n",
     "    if(is.null(bath_info_all)){\n",
