added central bacterial DEqMS

--- a/evaluation/bacterial/01_run_deqms.ipynb
+++ b/evaluation/bacterial/01_run_deqms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -30,18 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -151,7 +140,7 @@
     "\n",
     "    filter_list_META[[dataset]][[name]] <- de_results[['Protein']]\n",
     "\n",
-    "    # plor volcano plots\n",
+    "    # plot volcano plots\n",
     "    if(name == 'lab_E'){\n",
     "        plot_separate <- volcano_plot(\n",
     "        de_results, paste(dataset, name, \", Glu/Pyr\"),\n",
@@ -174,12 +163,13 @@
     "  ggsave(file = paste0(output_path, \"volcano_plots.svg\"), plot = layout, width = 15, height = 8)\n",
     "}\n",
     "\n",
+    "\n",
     "write_json(filter_list_META, \"/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/filter_list_META.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -219,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -266,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -274,18 +264,18 @@
    },
    "outputs": [],
    "source": [
-    "cd /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/\n",
+    "# cd /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/\n",
     "\n",
-    "Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaDE.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/ lab_A lab_B lab_C lab_D\n",
-    "Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaVolcanoR.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/ lab_A lab_B lab_C lab_D\n",
-    "Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_RankProd.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/ lab_A lab_B lab_C lab_D\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaDE.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/ lab_A lab_B lab_C lab_D\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaVolcanoR.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/ lab_A lab_B lab_C lab_D\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_RankProd.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/ lab_A lab_B lab_C lab_D\n",
     "\n",
-    "cp /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/MA_* /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/balanced/results/"
+    "# cp /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/balanced/MA_* /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/balanced/results/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -293,13 +283,13 @@
    },
    "outputs": [],
    "source": [
-    "cd /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/\n",
+    "# cd /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/\n",
     "\n",
-    "Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaDE.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/ lab_A lab_B lab_C lab_D\n",
-    "Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaVolcanoR.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/ lab_A lab_B lab_C lab_D\n",
-    "Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_RankProd.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/ lab_A lab_B lab_C lab_D\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaDE.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/ lab_A lab_B lab_C lab_D\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_MetaVolcanoR.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/ lab_A lab_B lab_C lab_D\n",
+    "# Rscript /home/yuliya/repos/cosybio/FedProt/evaluation_utils/meta_code/run_RankProd.R /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/ lab_A lab_B lab_C lab_D\n",
     "\n",
-    "cp /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/MA_* /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/imbalanced/results/"
+    "# cp /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/imbalanced/MA_* /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/imbalanced/results/"
    ]
   },
   {
@@ -311,25 +301,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Dataset:  balanced \n",
+      "\tNumber of proteins:  3059 \n",
+      "\tNumber of samples:  119 \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 3059 118 \n",
+      "\tAfter filtering: 3034 118 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“Partial NA coefficients for 761 probe(s)”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Dataset:  imbalanced \n",
+      "\tNumber of proteins:  3058 \n",
+      "\tNumber of samples:  74 \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 3058 73 \n",
+      "\tAfter filtering: 3014 73 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“Partial NA coefficients for 741 probe(s)”\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "datasets_list = c('balanced', 'imbalanced')\n",
+    "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
+    "\n",
+    "\n",
+    "for(dataset in datasets_list){\n",
+    "\n",
+    "  path_to_reports = paste0('/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/', dataset, '/')\n",
+    "  \n",
+    " \n",
+    "  central_intensities = NULL\n",
+    "  central_counts = NULL\n",
+    "  central_batch_info = read_tsv(paste0(path_to_reports, 'bath_info_all.tsv'), show_col_types = FALSE)\n",
+    "  central_batch_info <- central_batch_info %>%\n",
+    "    mutate(lab = as.factor(lab), condition = as.factor(condition))\n",
+    "\n",
+    "  for (name in labs_list) {\n",
+    "    \n",
+    "    intensities = read_tsv(paste0(path_to_reports, name, '/protein_groups_matrix.tsv'), show_col_types = FALSE)\n",
+    "    counts = read_tsv(paste0(path_to_reports, name, '/protein_counts.tsv'), show_col_types = FALSE)\n",
+    "\n",
+    "    if(is.null(central_intensities)){\n",
+    "      central_intensities = intensities\n",
+    "      central_counts = counts\n",
+    "    } else {\n",
+    "      central_intensities = full_join(central_intensities, intensities, by = 'rowname')\n",
+    "      central_counts = full_join(central_counts, counts, by = 'rowname')\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  cat('\\n\\nDataset: ', dataset, \"\\n\")\n",
+    "  cat('\\tNumber of proteins: ', nrow(central_intensities), '\\n')\n",
+    "  cat('\\tNumber of samples: ', ncol(central_intensities), '\\n')\n",
+    "\n",
+    "  central_intensities <- central_intensities %>% column_to_rownames('rowname')\n",
+    "  central_counts <- central_counts %>% column_to_rownames('rowname')\n",
+    "  central_intensities <- central_intensities[, central_batch_info$file]\n",
+    "    \n",
+    "  central_intensities <- filter_by_condition(central_intensities, central_batch_info, \n",
+    "        'file', c('Glu', 'Pyr'), 'condition')\n",
+    "  central_intensities <- log2(central_intensities + 1)\n",
+    "\n",
+    "  # select minimal count across column for each protein (with na.rm = TRUE)\n",
+    "  central_counts$count <- apply(central_counts, 1, min, na.rm = TRUE)\n",
+    "  central_counts <- central_counts %>% select(count)\n",
+    "\n",
+    "  # run DE analysis\n",
+    "  design <- make_design(central_batch_info, 'condition', 'lab')\n",
+    "  contrasts <- makeContrasts(Pyr - Glu, levels = colnames(design))\n",
+    "  de_results <- run_DE(central_intensities, central_counts, design, contrasts)\n",
+    "  de_results <- de_results %>% rownames_to_column('Protein')\n",
+    "  write.table(de_results, file = paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/', dataset, '/results/central_res.tsv'), sep = \"\\t\", quote = FALSE, row.names = FALSE)\n",
+    "\n",
+    "  # plot volcano plot\n",
+    "  plot_result <- volcano_plot(\n",
+    "    de_results, paste(dataset, \"central\", \", Glu/Pyr\"),\n",
+    "    pval_threshold = 0.01, logfc_threshold = 0.58,\n",
+    "    show_names = FALSE\n",
+    "  )\n",
+    "  ggsave(file = paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/', dataset, '/central_volcano_plot.svg'), plot = plot_result, width = 8, height = 5)\n",
+    "\n",
+    "  filter_list_META[[dataset]][['Central']] <- de_results[['Protein']]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "write_json(filter_list_META, \"/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/protein_lists.json\")"
+   ]
   },
   {
    "cell_type": "code",
